test/sema/generics/generic_main_function.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1]]:4: error: 'main' function cannot be generic
fn main<T>() {}
